Log warning when Major GC fails to recover significant memory
There are instances where processes spin in GC loops when Major GCs fail
to recover enough memory. By providing a warning before this condition
is reached, it should be possible to act on the warning by taking a JFR
before the JVM completely runs out of memory.