@@ -24,14 +24,14 @@ import java.util.concurrent.ThreadLocalRandom;
  * <p>
  * Test should always be run with:
  * <pre>
- * {@code   -Xmx1g -Xms1g -XX:+PrintGCApplicationStoppedTime}
+ * {@code   -Xmx1g -Xms1g}
  * </pre>
  * All GC algorithms should be tested:
  * <ul>
  * <li>Serial: {@code -XX:+UseSerialGC }</li>
  * <li>Parallel: {@code -XX:+UseParallelGC}</li>
- * <li>CMS: {@code -XX:+UseConcMarkSweepGC}</li>
  * <li>G1: {@code -XX:+UseG1GC}</li>
+ * <li>Z: {@code -XX:+UseZGC -XX:+ZGenerational}</li>
  * </ul>
  * Verifying stopped time in GC log to the stopped time from GCMonitor.
  */
@@ -39,7 +39,7 @@ public final class GcMonitorTester
 {
     private static final List<byte[]> VALUES = new ArrayList<>();
     private static final int VALUE_SIZE = 100 * 1024;
-    private static final long MAX_MEMORY_SIZE = (long) (0.9 * 1024 * 1024 * 1024);
+    private static final long MAX_MEMORY_SIZE = (long) (0.87 * 1024 * 1024 * 1024);
     private static long memorySize;
 
     private GcMonitorTester() {}
